updating  home component

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,16 @@
-<p>home works!</p>
+<main>
+    <section class="site-title">
+        <div class="site-background" data-aos="fade-up" data-aos-delay="100">
+            <h1 class="text-white">GO Secure Messenger</h1>
+            <h2 class="text-white">Amazing Private Secure Web Message </h2>
+            <button class="btn">Explore</button>
+        </div>
+    </section>
+
+    <!-- --------------------- Block horizontal Carousel ----------------- -->
+    <section>
+        <div class="blog">
+        </div>
+    </section>
+    <!-- ----------x---------- Block horizontal Carousel --------x-------- -->
+</main>
