updating footer component design

--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,1 +1,14 @@
-<p>footer works!</p>
+<footer class="footer">
+  <div class="container">
+    <hr>
+    <div class="row align-items-center justify-content-md-between">
+      <div class="col-md-6">
+        <div class="copyright">
+          <h4 class="text-gray ">
+            Copyright &copy; {{test | date: 'yyyy'}} All rights reserved
+          </h4>
+        </div>
+      </div>
+    </div>
+  </div>
+</footer>
