second update of the home component

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,15 +2,34 @@
     <section class="site-title">
         <div class="site-background" data-aos="fade-up" data-aos-delay="100">
             <h1 class="text-white">GO Secure Messenger</h1>
-            <h2 class="text-white">Amazing Private Secure Web Message </h2>
+            <h2 class="text-white">Amazing Private Secure Web Message</h2>
             <button class="btn">Explore</button>
         </div>
     </section>
 
     <!-- --------------------- Block horizontal Carousel ----------------- -->
     <section>
-        <div class="blog">
+        <div class="about-go-block" style="padding-top: 10rem;">
+            <div class="card" style="width: 30rem; padding: 2rem; float: left; margin-left: 5rem;">
+                <img class="card-img-top" src="./assets/img/brand/logo.svg" width="60" height="60"
+                    alt="Card image cap" />
+                <div class="card-body">
+                    <h5 class="card-title">Go Secure Web Messenger</h5>
+                    <p class="card-text">
+                        Some quick example text to build on the card title and make up the
+                        bulk of the card's content.
+                    </p>
+                    <a [routerLink]="['/login']" class="btn btn-primary">Explore Go</a>
+                </div>
+            </div>
+        </div>
+        <div _ngcontent-ccd-c119="" class="col-sm-4 col-6 mt-5 mt-sm-0 text-center" style="float:right; ">
+            <img _ngcontent-ccd-c119="" src="./assets/img/message-app.png" alt="Raised circle image"
+                class="img-fluid rounded-circle shadow-lg" style="object-fit: cover; transition: ease-in-out;" />
         </div>
     </section>
+
     <!-- ----------x---------- Block horizontal Carousel --------x-------- -->
+
+
 </main>
