--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -2,7 +2,7 @@
   class="navbar navbar-main navbar-expand-lg navbar-transparent navbar-light headroom headroom--top headroom--pinned">
   <div class="container">
     <a class="navbar-brand mr-lg-5" [routerLink]="['/home']">
-      <span class="text-logo">GO <img src="./assets/img/brand/logo.svg" width="60" height="60"> </span> 
+      <span class="text-logo">GO <img src="./assets/img/brand/logo.svg" width="60" height="60"> </span>
     </a>
     <button class="navbar-toggler" type="button" (click)="isCollapsed = !isCollapsed"
       [attr.aria-expanded]="!isCollapsed" aria-controls="navbar_global">
@@ -13,7 +13,7 @@
         <div class="row">
           <div class="col-6 collapse-brand">
             <a [routerLink]="['/home']">
-              <img src="./assets/img/brand/logoApp.png">
+              <img src="./assets/img/brand/logo.svg">
             </a>
           </div>
           <div class="col-6 collapse-close">
