--- a/frontend/src/app/pages/register/register.component.html
+++ b/frontend/src/app/pages/register/register.component.html
@@ -18,14 +18,14 @@
                             <div class="text-center text-muted mb-4">
                                 <small>Enregistrer dans notre plateforme</small>
                             </div>
-                            <form role="form">
+                            <form role="form" [formGroup]="userForm" (ngSubmit)="onSubmit()" >
                                 <div class="form-group" [ngClass]="{'focused':focus===true}">
                                     <div class="input-group input-group-alternative mb-3">
                                         <div class="input-group-prepend">
                                             <span class="input-group-text"><i class="ni ni-hat-3"></i></span>
                                         </div>
                                         <input class="form-control" placeholder="Nom d'utilisateur" type="text" (focus)="focus3=true"
-                                            (blur)="focus3=false">
+                                            (blur)="focus3=false" formControlName="username" >
                                     </div>
                                 </div>
                                 <div class="form-group" [ngClass]="{'focused':focus===true}">
@@ -34,7 +34,7 @@
                                             <span class="input-group-text"><i class="ni ni-hat-3"></i></span>
                                         </div>
                                         <input class="form-control" placeholder="Nom" type="text" (focus)="focus=true"
-                                            (blur)="focus=false">
+                                            (blur)="focus=false" formControlName="name" >
                                     </div>
                                 </div>
                                 <div class="form-group" [ngClass]="{'focused':focus===true}">
@@ -43,7 +43,7 @@
                                             <span class="input-group-text"><i class="ni ni-hat-3"></i></span>
                                         </div>
                                         <input class="form-control" placeholder="Téléphone" type="text" (focus)="focus4=true"
-                                            (blur)="focus4=false">
+                                            (blur)="focus4=false" formControlName="phone" >
                                     </div>
                                 </div>
                                 <div class="form-group" [ngClass]="{'focused':focus1===true}">
@@ -52,7 +52,7 @@
                                             <span class="input-group-text"><i class="ni ni-email-83"></i></span>
                                         </div>
                                         <input class="form-control" placeholder="Email" type="email"
-                                            (focus)="focus1=true" (blur)="focus1=false">
+                                            (focus)="focus1=true" (blur)="focus1=false" formControlName="email" >
                                     </div>
                                 </div>
                                 <div class="form-group" [ngClass]="{'focused':focus2===true}">
@@ -61,7 +61,7 @@
                                             <span class="input-group-text"><i class="ni ni-lock-circle-open"></i></span>
                                         </div>
                                         <input class="form-control" placeholder="Mot de passe" type="password"
-                                            (focus)="focus2=true" (blur)="focus2=false">
+                                            (focus)="focus2=true" (blur)="focus2=false" formControlName="password" >
                                     </div>
                                 </div>
                                 <div class="text-muted font-italic">
@@ -70,7 +70,7 @@
                                     </small>
                                 </div>
                                 <div class="text-center">
-                                    <button type="button" class="btn btn-primary mt-4">Create account</button>
+                                    <button type="button" class="btn btn-primary mt-4" [disabled]="userForm.invalid" >Create account</button>
                                 </div>
                             </form>
                         </div>
