--- a/frontend/src/app/pages/register/register.component.html
+++ b/frontend/src/app/pages/register/register.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <main>
     <section class="section section-shaped section-lg">
         <div class="shape shape-style-1 bg-gradient-default">
@@ -103,7 +104,13 @@
                                 </div>
                             </div>
                         </div>
-                        
+                    </div>
+                    <div class="row mt-3">
+                        <div class="col-12 text-right">
+                            <a [routerLink]="['/login']" class="text-light">
+                                <small>Vous avez déjà un compte ? Connectez-vous</small>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
