--- a/frontend/src/app/container/container.component.html
+++ b/frontend/src/app/container/container.component.html
@@ -1,13 +1,20 @@
-<div class="banniere">MESSAGE BY ISJ</div>
-<div class="container">
-    <div class="row mb-3">
-            <div class='menu_haut'>
-              <button class='contact_hist color_menu_selected'><i class='fa fa-users'></i></button>
-              <button class='contact_hist'><i class='fa fa-hourglass'></i></button>
+<html>
+    <head>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    </head>
+    <body>
+        <div class="banniere">MESSAGE BY ISJ</div>
+        <div class="container">
+            <div class="row mb-3">
+                    <div class='menu_haut'>
+                    <button class='contact_hist color_menu_selected'><i class='fa fa-users'></i></button>
+                    <button class='contact_hist'><i class='fa fa-hourglass'></i></button>
+                </div>
+            </div>
+            <app-contacts></app-contacts> 
         </div>
-    </div>
-
-    <app-contacts></app-contacts> 
-</div>
+    </body>
+</html>
 
 
