--- a/frontend/src/app/contacts/contacts.component.css
+++ b/frontend/src/app/contacts/contacts.component.css
@@ -60,6 +60,16 @@ box-shadow:  1px 1px 3px #b8b8b8,
 margin-left:30px;
 }
 
+#fichier{
+    border:0;
+    padding:15px;
+    height:56px;
+    background:rgb(255,255,255);
+    box-shadow:  1px 1px 3px #b8b8b8, 
+                    -1px -1px 3px #ffffff;
+    margin-left:30px;
+    }
+
 .table-bordered{
 border:0;
 background:white;
